docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -111,11 +111,12 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-Это первая и, хочется надеяться, не последняя из серии презентаций о применении принципов *Чистой Архитектуре* во
+Это первая и, хочется надеяться, не последняя из серии презентаций о применении принципов *Чистой Архитектуры* во
 фронтенд-разработке.
 
 Конечно, было бы неплохо сначала рассказать о том, как *Чистая Архитектура* пришла во фронтенд, какое место она занимает
-там сегодня, и каковы дальнейшие перспективы. Но, как говорится, пока есть к чему стремиться.
+там сегодня, и каковы там её дальнейшие перспективы. Но, к сожалению, такой рассказ пока не готов, как говорится, пока
+есть к чему стремиться.
  
 Разговор пойдёт вокруг клиентского приложения - стартера, предметная область и, соответственно, бизнес-логика которого
 предельно минималистичны - это обычный счётчик с функциями инкремента и сброса.
