docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -123,8 +123,8 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 Но при всей своей минималистичности стартер представлен fullstack-решением, в котором клиентская часть взаимодействует
 с внешним сервисом по REST API и имеет несколько аспектов, требующих отдельного рассмотрения.
  
-В этой презентации главное внимание уделяется *Правилу Зависимостей* *Чистой Архитектуры*, в частности, тому, как оно
-может быть представлено в программном коде, в данном случае - на *TypeScript*. 
+Главное внимание здесь будет уделяться *Правилу Зависимостей*, в частности, тому, как оно может быть представлено в
+программном коде, в данном случае - на *TypeScript*. 
 
 </Notes>
 
