docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -121,7 +121,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 Разговор пойдёт вокруг клиентского приложения - стартера, предметная область и, соответственно, бизнес-логика которого
 предельно минималистичны - это обычный счётчик с функциями инкремента и сброса.
 Но при всей своей минималистичности стартер представлен fullstack-решением, в котором клиентская часть взаимодействует
-с внешним сервисом по REST API и имеет несколько аспектов, требующих отдельного рассмотрения.
+с внешним сервисом по REST и имеет несколько аспектов, требующих отдельного рассмотрения.
  
 Главное внимание здесь будет уделяться *Правилу Зависимостей*, в частности, тому, как оно может быть представлено в
 программном коде, в данном случае - на *TypeScript*. 
@@ -139,7 +139,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 На кого рассчитана презентация, какова её целевая аудитория ?
 
 От аудитории не требуется наличия каких-либо предварительных знаний о *Чистой Архитектуре* и *Правиле Зависимостей*. 
-Хотя, конечно, присутствие хотя бы минимального понимания существа проблем ими решаемых будет полезным.
+Хотя, конечно, присутствие хотя бы минимального понимания существа проблем, ими решаемых, будет полезным.
 Полезным будет также и знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
 Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
 
@@ -149,7 +149,7 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 поддерживать и расширять в течение долгого времени.*
 
 Несмотря на то, что пользовательский интерфейс стартера реализован на *React*, для понимания того, о чём здесь будет
-говориться, знания *React* не потребуются.   
+говориться, знания *React* не потребуется.   
 
 </Notes>
 
@@ -163,10 +163,10 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 <Notes>
 
-Как ни парадоксально, но по большому счёту главная тема *Чистой Архитектуры* это производительность.
+Как ни парадоксально, но в конечном счёте главная тема *Чистой Архитектуры* это производительность.
 
-При этом, конечно, нужно понимать, какую производительность мы измеряем, правильно выбирать условия её измерения и очень важно
-избегать некорректных сравнений.
+При этом, конечно, нужно понимать, о какой производительности идёт речь, правильно выбирать условия её измерения и очень
+важно избегать некорректных сравнений.
 
 Вот, например, есть такой вид спорта для программистов, называется *хакатон* (сокращение от *хакерский марафон*).
 
@@ -209,9 +209,9 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 *Чистая Архитектура* повышает скорость не программиста-спринтера, а программиста-стайера, масштабируя скорость его
 разработки на длинных дистанциях.
 
-При игре в долгую всё становится на свои места. Чем больше функциональность разрастается и приобретает серьёзный
-масштаб, тем больше правила *Чистой Архитектуры* начинают выигрывать - вначале в скорости разработки, затем - в скорости
-старта - особенно на фронтенде, а затем "грязные" конкуренты попросту исчезают.
+При игре в долгую всё становится на свои места. Чем больше функциональность программного продукта разрастается и
+приобретает серьёзный масштаб, тем больше правила *Чистой Архитектуры* начинают выигрывать - вначале в скорости
+разработки, затем - в скорости старта - особенно на фронтенде, а затем "грязные" продукты-конкуренты попросту исчезают.
 
 </Notes>
 
