docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -247,9 +247,9 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 *Чистая Архитектура* - главное, для чего создавался рассматриваемый здесь стартер.
 
-Но из всех правил *Чистой Архитектуры* в этой презентации будет рассмотрено только *Правило Зависимостей*, про которое,
-кстати, стоит заметить, что само по себе оно не является изобретением *Чистой Архитектуры*. По сути *Правило
-Зависимостей* присутствовало и в [*Гексагональной Архитектуре*](https://fideloper.com/hexagonal-architecture),и в
+Но из всех её правил в этой презентации будет рассмотрено только *Правило Зависимостей*, про которое, кстати, стоит
+заметить, что само по себе оно не является изобретением *Чистой Архитектуры*. По сути *Правило Зависимостей*
+присутствовало и в [*Гексагональной Архитектуре*](https://fideloper.com/hexagonal-architecture),и в
 [*Луковой*](https://www.thinktocode.com/2018/08/16/onion-architecture/).
 
 В общих чертах стартер отражает актуальный взгляд автора на то, каким примерно должно быть frontend-приложение,
