docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -349,8 +349,8 @@ Substitution Principle*, для применения которого необх
 [небезосновательные мнения](https://accu.org/index.php/journals/1957), к которым склонен присоединиться и автор, что эти
 принципы не лишены избыточности.
 
-Какие-то из них, такие, как *SRP*, *DIP* и *LSP* - главные, первичные, в то время как остальные - производные, вторичные,
-присутствие которых может быть оправдано понятным желанием получить красивую аббревиатуру.
+Какие-то из них, такие, как *SRP*, *DIP* и, может быть, *LSP* - главные, первичные, в то время как остальные -
+производные, вторичные, присутствие которых может быть оправдано понятным желанием получить красивую аббревиатуру.
 
 Но здесь не об этом.  
 
@@ -363,14 +363,15 @@ Substitution Principle*, для применения которого необх
 <Notes>
 
 Притом что и в этой презентации, и в коде самого стартера используются термины, вполне традиционные для *Чистой
-Архитектуры*, они могут быть непривычны для тех, кто только начинает знакомиться с этой областью, поэтому нуждаются в
-отдельных пояснениях.
+Архитектуры*, они могут быть непривычны для тех, кто только начинает знакомиться с этой областью.
+Поэтому эти термины нуждаются в отдельных пояснениях.
 
-Прекрасный разбор терминов и понятий *Чистой Архитектуры*, разрешающий ряд недоразумений, сделан в работе [*Заблуждения
-Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
+Разбор терминов и понятий *Чистой Архитектуры*, разрешающий ряд недоразумений, сделан в работе
+[*Заблуждения Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/). Название статьи неудачное, но
+содержание замечательно.
 
 Перед тем, как перейти к дальнейшему изложению, не погружаясь глубоко в детали и воспользовавшись результатами этой
-работы, оставим здесь только то, что необходимо для дальнейшего изложения в виде краткого словаря используемых терминов.
+работы, оставим здесь только самое необходимое в виде краткого словаря используемых терминов.
 Каждый из этих терминов будет снабжён соответствующими пояснениями.
 
 </Notes>
