docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -392,7 +392,7 @@ Substitution Principle*, для применения которого необх
 
 <Notes>
 
-*Domain* - Модель предметной области.
+*Domain* - *Модель предметной области* или просто *предметная область* - в зависимости от контекста.
 
 Является самой стабильной, сущностной составляющей любого программного продукта. 
 
@@ -418,7 +418,7 @@ Substitution Principle*, для применения которого необх
 
 <Notes>
 
-*Entities* - иногда понимаются буквально, как сущности некоторой предметной области, иногда, как слой *бизнес-логики*,
+*Entities* иногда понимаются буквально, как сущности некоторой предметной области, а иногда - как слой *бизнес-логики*,
 разделяемый несколькими программными продуктами: системами, приложениями, сервисами.
 
 </Notes>
@@ -441,9 +441,9 @@ Substitution Principle*, для применения которого необх
 
 <Notes>
 
-*Use Case* - одно из ключевых понятий архитектуры системы, в частности, с ним тесно связан *Принцип Единой
-Ответственности* (*SRP*), который, в свою очередь, является одним из ключевых принципов *SOLID* и, соответственно,
-*Чистой Архитектуры*.
+*Use Case* - одно из ключевых архитектурных понятий, в частности, с ним тесно связан принцип *SRP* - *Принцип Единой
+Ответственности*. Его рассмотрение не уместилось в формате этой презентации, но этот принцип является одним из ключевых
+принципов *SOLID* и, соответственно, *Чистой Архитектуры*.
 
 </Notes>
 
@@ -511,7 +511,7 @@ Substitution Principle*, для применения которого необх
 <Notes>
 
 *Infrastructure* - инфраструктура - всё то, что находится во внешнем слое - слое, который следует за *Interface
-Adapters*.
+Adapters*, как-бы оборачивает его.
 
 Типичными представителями *Инфраструктуры* являются базы данных (*DB*) и пользовательские интерфейсы (*UI*) со своими
 фреймворками.
@@ -526,10 +526,8 @@ Adapters*.
 <Notes>
 ...
 
-Далее речь пойдёт уже о т*Правиле Зависимостей*, поэтому
-
-На этом месте стоит сделать небольшое отступление для того, чтобы напомнить, в чём состоит *Правило Зависимостей*, и для
-чего оно нужно.
+Далее речь пойдёт уже о *Правиле Зависимостей*, поэтому самое время сделать небольшое отступление для того, чтобы
+напомнить, в чём состоит *Правило Зависимостей*, и для чего оно нужно.
 
 ...
 </Notes>
@@ -542,8 +540,7 @@ Adapters*.
 ...
 
 На диаграммах *Правило Зависимостей* обычно изображается стрелками, показывающими направление зависимостей: от
-инфраструктурной периферии - к смысловому центру, которым всегда является бизнес-логика (на картинке - *Entities* + *Use
-Cases*). 
+инфраструктурной периферии - к смысловому центру, которым всегда является бизнес-логика. 
 
 Во избежание недоразумений необходимо уточнить, что под зависимостями в данном случае подразумеваются только
 *зависимости времени разработки* - *design-time*-зависимости.
@@ -663,7 +660,7 @@ Cases*).
 
 <Notes>
 
-Это клиентская часть приложения, обозначим её явно.
+Это клиентская часть приложения, обозначим её явно, обведя пунктирной линией и снабдив подписью - "Client".
 
 </Notes>
 
