docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -670,7 +670,7 @@ Adapters*, как-бы оборачивает его.
 
 <Notes>
 
-Для полноты картины разместим на диаграмме и серверную часть, реализующую на REST API сервис хранения значения счётчика,
+Для полноты картины разместим на диаграмме и серверную часть, реализующую на REST сервис хранения значения счётчика,
 например, на случай перезагрузки клиентского приложения.
 
 Отметим, что так же, как и *UI*, сервис, реализующий REST API, относится к инфраструктуре.
@@ -696,8 +696,8 @@ Adapters*, как-бы оборачивает его.
 
 <Notes>
 
-И завершающим штрихом добавим линию потока управления (run-time-зависимостей) - от вершины и до дна стека - от действий
-пользователя до реакции сервиса на серверной стороне, которую не будем здесь детализировать.
+И завершающим штрихом диаграммы добавим линию потока управления (run-time-зависимостей) - от вершины и до дна стека - от
+действий пользователя до реакции сервиса на серверной стороне, которую, впрочем, не будем здесь детализировать.
 
 </Notes>
 
@@ -707,14 +707,13 @@ Adapters*, как-бы оборачивает его.
 
 <Notes>
 
-В последующем изложении будут использоваться понятия *provided-* и *consumed-*интерфейсов.
-*Provided-интерфейсы* - те, что реализуются - как-бы поставляются модулем, а *consumed* - те, что им используются,
-как-бы потребляются. И, чтобы совсем запутать (на самом деле нет) аудиторию, дальше по тексту *provided*-интерфейсы
-иногда будем называть *входными* поскольку через них в модуль входит поток управления, а *consumed* - *выходными*,
-поскольку через них поток управления из модуля *выходит*.
+В последующем изложении будут использоваться понятия *входных* и *выходных* интерфейсов.
 
-На языке *UML* *Provided-* и *consumed-*интерфейсы обозначаются так называемой *socket-ball*-нотацией (иногда *ball* заменяют
-на *lollipop* - леденец).
+*Входными интерфейсами* будем называть интерфейсы, через которые поток управления входит в модуль, а *выходными* - те,
+через которые поток управления из модуля *выходит*.
+
+На *UML* *входные* и *выходные* интерфейсы называются, соответственно, *provided* и *consumed* и обозначаются так
+называемой *socket-ball*-нотацией (причём *ball* часто заменяют на *lollipop* - леденец).
 
 ...
 </Notes>
