docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -780,7 +780,7 @@ Adapters*, как-бы оборачивает его.
 
 <Notes>
 
-На слайде показана ещё большая детализация - с прорисовкой содержимого слоёв *usecases* и *entities*.
+А на этом слайде показана ещё большая детализация - с прорисовкой содержимого слоёв *usecases* и *entities*.
 
 Таким же образом может быть детализирован каждый архитектурный слой, но это не входит в задачи данной презентации.
 
@@ -793,6 +793,9 @@ Adapters*, как-бы оборачивает его.
 <Notes>
 
 Наконец, добрались до кода.
+
+Все люди разные. Кто-то лучше понимает UML-диаграммы, кто-то программный код.
+Настоящая презентация адресуется и тем, и другим, она никого не дискриминирует ;). 
 
 </Notes>
 
