docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -824,11 +824,10 @@ Adapters*, как-бы оборачивает его.
 На слайде без изъятий представлены исходники трёх модулей стартера - представителей двух соседних архитектурных слоёв.
 Эти модули показаны вместе, чтобы легче было увидеть их взаимосвязь по зависимостям.
 
-В центральном столбце размещён *CounterIncrement* - модуль бизнес-логики из слоя *Use Cases*.
+В центральном столбце размещён модуль бизнес-логики из слоя *Use Cases*.
 
-По краям - модули из одного и того же слоя - слоя адаптеров: слева - *useIncrementPresenter* - презентер для *React*,
-реализованный как *custom hook*. Справа - *CounterIncrementRestGateway* - шлюз доступа к внешнему сервису, сохраняющему
-и возвращающему текущее состояние счётчика.
+По краям - модули из одного и того же слоя - слоя адаптеров: слева - презентер для *React*, реализованный как *custom
+hook*. Справа - шлюз доступа к внешнему сервису, сохраняющему и возвращающему текущее состояние счётчика.
 
 В начале каждого модуля находится самое главное: импорт, экспорт, интерфейсы и конструктор.
 
@@ -884,21 +883,21 @@ Adapters*, как-бы оборачивает его.
 
 <Notes>
 
-Рассмотрим модуль *CounterIncrement*, находящийся в директории-слое *usecases*.
+Начнём с модуля *CounterIncrement*, находящегося в директории-слое *usecases*.
 
 Обратите внимание на первую строку - она содержит импорт класса *Counter* из слоя *entities*.
-С точки зрения *Правила Зависимостей* всё правильно: внешний слой *usecases* импортирует из внутреннего - из *entities*. 
+С точки зрения *Правила Зависимостей* здесь всё правильно: внешний слой *usecases* импортирует из внутреннего - из
+*entities*. 
 
 ->
 
 В начале модуля размещены определения его *входного* и *выходного* интерфейсов, названных, соответственно,
 *CounterIncrementIn* и *CounterIncrementOut*.
 
-Оба этих интерфейса экспортируются, чтобы быть импортированы из слоя адаптеров: входной - из презентера, выходной - из
-шлюза.
+Оба этих интерфейса экспортируются, чтобы быть импортированы слоем адаптеров: входной - презентером, выходной - шлюзом.
 
-Интерфейс *CounterIncrementOut* является *требуемым* (*required*) интерфейсом для шлюза доступа к внешнему сервису, к
-рассмотрению которого сейчас переходим.
+Интерфейс *CounterIncrementOut*, кроме того, что он *выходной*, также является *требуемым* (*required*) интерфейсом для
+шлюза доступа к внешнему сервису, к рассмотрению которого сейчас переходим.
 
 </Notes>
 
