docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -934,9 +934,8 @@ hook*. Справа - шлюз доступа к внешнему сервису
 сущностей.
 
 Здесь можно обратить внимание на то, что импорт выполняется модулем шлюза хоть и из внутреннего, но не из соседнего
-слоя, перескакивая через слой *usecases*. Это проявление того, все слои бизнес-логики рассматриваются адаптерами как
-единое целое - *Domain*.
-Будем считать это нормой.
+слоя, перескакивая через слой *usecases*. Это проявление того, что все слои бизнес-логики рассматриваются адаптерами как
+единое целое - *Domain*. Будем считать это нормой.
 
 ->
 
@@ -1006,7 +1005,7 @@ hook*. Справа - шлюз доступа к внешнему сервису
 
 ->
 
-Вторая строка импортирует всё то, что необходимое для взаимодействия с *React*.
+Вторая строка импортирует всё необходимое для взаимодействия с *React*.
 
 Но, как обещалось в самом начале, на *React*-специфичных деталях здесь останавливаться не будем.
 
