docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -1041,15 +1041,15 @@ hook*. Справа - шлюз доступа к внешнему сервису
 
 <Notes>
 
-Конечно, на функциональности счётчика для web-платформы можно показать, каким должен быть самый старт разработки, чтобы
-с самого начала не лишиться перспектив на развитие, но этого слишком мало для того, чтобы преимущества *Чистой
+Конечно, на функциональности счётчика для web-платформы можно показать, каким примерно должен быть старт разработки,
+чтобы с самого начала не лишиться перспектив на развитие, но этого слишком мало для того, чтобы преимущества *Чистой
 Архитектуры* успели проявиться.
 
-Напомним, что разработка на принципах *Чистая Архитектура* используется при игре в долгую. Преимущества *Чистой
+Напомним, что разработка на принципах *Чистой Архитектуры* используется при игре в долгую. Преимущества *Чистой
 Архитектуры* по-настоящему проявляются не на старте разработки, а в ходе развития системы.
 
-Поэтому в продолжение этой презентации запланировано ещё несколько, на первой из которых предполагается демонстрация
-развития показанного здесь решения для мобильных платформ, конкретно - на *React Native*. 
+Поэтому в продолжение этой презентации запланировано ещё несколько, и на первой из них предполагается демонстрация
+развития показанного здесь решения уже для мобильных платформ, конкретно - для *React Native*. 
 
 </Notes>
 
@@ -1060,6 +1060,10 @@ hook*. Справа - шлюз доступа к внешнему сервису
 ---
 
 # СПАСИБО ЗА ВНИМАНИЕ!
+
+---
+
+# ВОПРОСЫ ?
 
 ---
 
