docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -795,7 +795,7 @@ Adapters*, как-бы оборачивает его.
 Наконец, добрались до кода.
 
 Все люди разные. Кто-то лучше понимает UML-диаграммы, кто-то программный код.
-Настоящая презентация адресуется и тем, и другим, она никого не дискриминирует ;). 
+Эта презентация никого не дискриминирует - здесь есть и то, и другое). 
 
 </Notes>
 
@@ -821,6 +821,8 @@ Adapters*, как-бы оборачивает его.
 
 <Notes>
 
+Для демонстрации проекции *Правила Зависимостей* на *TypeScript* рассмотрим самые показательные участки кода.
+
 На слайде без изъятий представлены исходники трёх модулей стартера - представителей двух соседних архитектурных слоёв.
 Эти модули показаны вместе, чтобы легче было увидеть их взаимосвязь по зависимостям.
 
@@ -842,7 +844,7 @@ hook*. Справа - шлюз доступа к внешнему сервису
     Модуль архитектурного слоя не должен ничего импортировать из модулей внешних по отношению к нему слоёв.
     <br/>
     При этом он импортирует из модулей внутренних слоёв и может импортировать из модулей своего слоя.
-    <p style="font-size: 50px; text-align:right; color:#addb67;"><i>Правило Зависимостей на языке программирования</i></p>
+    <p style="font-size: 50px; text-align:right; color:#addb67;"><i>Правило Зависимостей - проекция на язык программирования</i></p>
 </p>
 
 <Notes>
@@ -884,6 +886,8 @@ hook*. Справа - шлюз доступа к внешнему сервису
 <Notes>
 
 Начнём с модуля *CounterIncrement*, находящегося в директории-слое *usecases*.
+
+На левой части слайда *UML*, на правой - *TypeScript*.
 
 Обратите внимание на первую строку - она содержит импорт класса *Counter* из слоя *entities*.
 С точки зрения *Правила Зависимостей* здесь всё правильно: внешний слой *usecases* импортирует из внутреннего - из
@@ -1031,7 +1035,7 @@ hook*. Справа - шлюз доступа к внешнему сервису
 ...
 
 Заметим лишь, что модуль любого адаптера своими импортами всегда одной ногой стоит во внешнем для себя слое (в данном
-случае *UI* *React*), а другой ногой - во внутреннем (в данном случае *usecases*).
+случае, в слое пользовательского интерфейса - *ui*), а другой ногой - во внутреннем (в данном случае *usecases*).
 
 </Notes>
 
