docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -1041,19 +1041,35 @@ hook*. Справа - шлюз доступа к внешнему сервису
 
 ---
 
+# В чём "профит" ?
+
+<Notes>
+
+Кто-то, наверняка спросит (как минимум, подумает): "Ну а в чём, собственно, профит ?"
+
+Да, уже понятно, как кодировать *Правило Зависимостей*, но что это даёт кроме дополнительных накладных расходов ? 
+
+</Notes>
+
+---
+
 # Что дальше ?
 
 <Notes>
 
-Конечно, на функциональности счётчика для web-платформы можно показать, каким примерно должен быть старт разработки,
-чтобы с самого начала не лишиться перспектив на развитие, но этого слишком мало для того, чтобы преимущества *Чистой
-Архитектуры* успели проявиться.
+Конечно, на функциональности счётчика для web-платформы можно показать, каким примерно должен быть старт разработки
+программного продукта, чтобы с самого начала не лишиться перспектив на его развитие, но этого слишком мало для того,
+чтобы преимущества *Чистой Архитектуры* успели проявиться.
 
-Напомним, что разработка на принципах *Чистой Архитектуры* используется при игре в долгую. Преимущества *Чистой
-Архитектуры* по-настоящему проявляются не на старте разработки, а в ходе развития системы.
+Напомним, что разработка на принципах *Чистой Архитектуры* используется при игре в долгую. Её преимущества по-настоящему
+проявляются не на старте разработки продукта, а в ходе его длительного роста.
 
-Поэтому в продолжение этой презентации запланировано ещё несколько, и на первой из них предполагается демонстрация
-развития показанного здесь решения уже для мобильных платформ, конкретно - для *React Native*. 
+Поэтому в продолжение этой презентации запланировано ещё несколько, на них предполагается продемонстрировать то, как
+происходит функциональное масштабирование программного продукта, как по-горизонтали - при распространении его на другие
+платформы, так и по-вертикали - при добавлении в продукт новых свойств и функций.
+
+Если всё получится, на следующей презентации будет показано развитие "вширь", как существующий функционал будет
+показанное решение уже для мобильных платформ, конкретно - для *React Native*. 
 
 </Notes>
 
