docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -818,7 +818,6 @@ Adapters*, как-бы оборачивает его.
 
 </CodeSurferColumns>
 
-
 <Notes>
 
 Для демонстрации проекции *Правила Зависимостей* на *TypeScript* рассмотрим самые показательные участки кода.
@@ -1041,19 +1040,52 @@ hook*. Справа - шлюз доступа к внешнему сервису
 
 ---
 
-# В чём "профит" ?
+<CodeSurferColumns themes={[myTheme, myTheme, myTheme]}>
+
+<Step>
+
+```ts file=../../src/adapters/presenters/useIncrementPresenter.ts title="useIncrementPresenter"
+```
+
+```ts file=../../src/domain/usecases/CounterIncrement.ts title="CounterIncrement"
+```
+
+```ts file=../../src/adapters/gateways/CounterIncrementRestGateway.ts title="CounterIncrementRestGateway"
+```
+
+</Step>
+
+
+</CodeSurferColumns>
 
 <Notes>
 
-Кто-то, наверняка спросит (как минимум, подумает): "Ну а в чём, собственно, профит ?"
+Вернёмся к одному из предыдущих слайдов.
 
-Да, уже понятно, как кодировать *Правило Зависимостей*, но что это даёт кроме дополнительных накладных расходов ? 
+Кто-то, наверняка спросит (как минимум, подумает): "Ну а в чём, собственно, профит, для чего всё это нужно ?"
+Ну да, стало понятно, как кодировать *Правило Зависимостей*, но что это нам даёт кроме дополнительных накладных
+расходов ?
+
+Ведь это всё можно было бы уместить более компактно - в двух, и даже в одном модуле, собрав весь код в *React*-хуке
+*useIncrementPresenter*, что в левом столбце.  
+
+...
+</Notes>
+
+---
+
+# Конец первой серии
+
+<Notes>
+...
+
+Но на этом - самом интересном месте - как этого требует классика жанра, первая презентация заканчивается.
 
 </Notes>
 
 ---
 
-# Что дальше ?
+# Продолжение следует
 
 <Notes>
 
