docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -1090,8 +1090,9 @@ hook*. Справа - шлюз доступа к внешнему сервису
 <Notes>
 
 Конечно, на функциональности счётчика для web-платформы можно показать, каким примерно должен быть старт разработки
-программного продукта, чтобы с самого начала не лишиться перспектив на его развитие, но этого слишком мало для того,
-чтобы преимущества *Чистой Архитектуры* успели проявиться.
+программного продукта, чтобы с самого начала не лишиться перспектив на его развитие.
+
+Но для того, чтобы преимущества *Чистой Архитектуры* успели проявиться, этого слишком мало.
 
 Напомним, что разработка на принципах *Чистой Архитектуры* используется при игре в долгую. Её преимущества по-настоящему
 проявляются не на старте разработки продукта, а в ходе его длительного роста.
@@ -1100,14 +1101,11 @@ hook*. Справа - шлюз доступа к внешнему сервису
 происходит функциональное масштабирование программного продукта, как по-горизонтали - при распространении его на другие
 платформы, так и по-вертикали - при добавлении в продукт новых свойств и функций.
 
-Если всё получится, на следующей презентации будет показано развитие "вширь", как существующий функционал будет
-показанное решение уже для мобильных платформ, конкретно - для *React Native*. 
+Если всё получится, на следующей презентации будет показан вариант масштабирования по-горизонтали - так сказать,
+развития "вширь" - как существующий функционал, оставаясь в единой кодовой базе, может распространяться на мобильные
+платформы, конкретно - с использованием *React Native*. 
 
 </Notes>
-
----
-
-# На этом пока всё
 
 ---
 
