docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -1081,6 +1081,8 @@ hook*. Справа - шлюз доступа к внешнему сервису
 
 Но на этом - самом интересном месте - как этого требует классика жанра, первая презентация заканчивается.
 
+Ответ на поставленный вопрос будет дан в ближайшей презентации.
+
 </Notes>
 
 ---
