--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -115,8 +115,8 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 фронтенд-разработке.
 
 Конечно, было бы неплохо сначала рассказать о том, как *Чистая Архитектура* пришла во фронтенд, какое место она занимает
-там сегодня, и каковы там её дальнейшие перспективы. Но, к сожалению, такой рассказ пока не готов, как говорится, пока
-есть к чему стремиться.
+там сегодня, и каковы там её дальнейшие перспективы. Но, к сожалению, такой рассказ пока не готов, как говорится, есть к
+чему стремиться.
  
 Разговор пойдёт вокруг клиентского приложения - стартера, предметная область и, соответственно, бизнес-логика которого
 предельно минималистичны - это обычный счётчик с функциями инкремента и сброса.
@@ -604,7 +604,7 @@ Adapters*, как-бы оборачивает его.
 
 <Notes>
 
-Дальнейшее изложение посвящено разбору конкретного приложения - тому, как нём обеспечивается соблюдение *Правила
+Дальнейшее изложение посвящено разбору конкретного приложения - тому, как в нём обеспечивается соблюдение *Правила
 Зависимостей*.
 
 Начнём с UML-диаграмм.
