--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -138,15 +138,17 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 
 На кого рассчитана презентация, какова её целевая аудитория ?
 
-От аудитории не требуется наличия каких-либо предварительных знаний о *Чистой Архитектуре* и *Правиле Зависимостей*. 
-Хотя, конечно, присутствие хотя бы минимального понимания существа проблем, ими решаемых, будет полезным.
+От аудитории, то есть от вас, не требуется наличия каких-либо предварительных знаний о *Чистой Архитектуре* и *Правиле
+Зависимостей*.
+Хотя, конечно, присутствие хотя бы минимального понимания существа проблем, решаемых *Чистой Архитектурой*, будет
+полезным.
 Полезным будет также и знакомство с материалом, изложенным в презентации [*О Принципе Инверсии
-Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh).
+Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh), ссылка на которую будет приведена в конце.
 
-Для тех, кому тема совсем незнакома, сформулируем кратко, немного перефразировав Википедию:
+Для тех, кому тема совсем незнакома, сформулируем кратко, немного изменив текст Википедии:
 
 *Использование принципов Чистой Архитектуры способствует созданию такой программной системы, которую будет легко
-поддерживать и расширять в течение долгого времени.*
+развивать и поддерживать в течение долгого времени.*
 
 Несмотря на то, что пользовательский интерфейс стартера реализован на *React*, для понимания того, о чём здесь будет
 говориться, знания *React* не потребуется.   
