docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -1081,7 +1081,7 @@ hook*. Справа - шлюз доступа к внешнему сервису
 <Notes>
 ...
 
-Но на этом - самом интересном месте - как этого требует классика жанра, первая презентация заканчивается.
+Но на этом - самом интересном месте - как требует классика жанра, первая презентация заканчивается.
 
 Ответ на поставленный вопрос будет дан в ближайшей презентации.
 
