docs: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -55,25 +55,14 @@ import useIncrementPresenter from "./diagrams/useIncrementPresenter.svg";
 </Head>
 
 ---
-
-# Как смотреть эту презентацию
-
-<Notes>
-
-Как смотреть эту презентацию
-
-</Notes>
-
----
-
-<p style="font-size: 80px; text-align:center;">
-Для самостоятельного просмотра презентации включите режим <i>Заметки докладчика</i>:
-</p>
-<p style="font-size: 80px; padding-bottom:40px;">
-    <ul>
-        <li><i>Alt+P</i> - на Windows</li>
-        <li><i>Option+P</i> - на Mac</li>
-    </ul>
+<p style="font-size: 60px; text-align:left; padding:200px;">
+    Для самостоятельного (без докладчика) просмотра презентации включите режим <i>Заметки докладчика</i>:
+    <br/>
+    <snap style="text-align:center;">
+        - <i>Alt+P</i> - на Windows,
+        <br/>
+        - <i>Option+P</i> - на Mac. 
+    </snap>
 </p>
 
 <Notes>
